tests/negative/undefined_symbol.rkl
; A symbol with no binding in any enclosing scope.
(print "$0" no-such-name)
